# endurox-rust

./: .dockerignore  .env.oracle.example  .env.postgres.example  .gitignore  .gitlab-ci.yml  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  DIESEL_BENCHMARK_RESULTS.md  DIESEL_MIGRATION_NOTE.md  DOCKER_DATABASE_SETUP.md  DOCKER_USAGE.md  DOCUMENTATION_INDEX.md  Dockerfile  GETTING_STARTED.md  LD_PRELOAD_ISSUE.md  LICENSE  LINUX_WITHOUT_DOCKER.md  MULTIPLE_FD_FILES.md  ORACLE_REST_INTEGRATION.md  README.md  RELEASE_NOTES.md  SOLUTION_SUMMARY.md  TRANSACTION_API.md  UBF_FIELDS_GUIDE.md  UBF_STRUCT_GUIDE.md  bench_oha.sh  benchmark_create_parallel.sh  benchmark_oracle_rest.sh  benchmark_oracle_rest_v2.sh  benchmark_results.txt  benchmark_results_20251107_211527.txt  benchmark_results_20251110_183833.txt  benchmark_results_20251110_184747.txt  benchmark_results_20251110_190027.txt  docker-compose.yml  setenv.sh  test.fd.h  test_derive.sh  test_load.sh  (+3 more)
.github/workflows/: build.yml
conf/: app.ini  common-config.conf  ndrxconf.ini  ndrxconfig.xml
db/: .gitignore
db/oracle/: 01_init.sql
endurox-derive/: Cargo.toml  README.md
endurox-derive/src/: lib.rs
endurox-sys/: Cargo.toml  README.md  build.rs
endurox-sys/src/: client.rs  ffi.rs  lib.rs  log.rs  server.rs  ubf.rs  ubf_fields.rs  ubf_struct.rs
endurox-sys/tests/: ubf_struct_test.rs  ubf_test.rs
logs/: ULOG.20251105
oracle_txn_server/: .env.example  Cargo.toml  MIGRATION_GUIDE.md  README.md  diesel.toml  installation.txt  migrate.py  migrate_universal.py
oracle_txn_server/migrations/: README.md
oracle_txn_server/migrations/00000000000000_create_transactions/: down.sql  up.sql
oracle_txn_server/migrations/2025-11-07-000000_create_transactions/: down.sql  up.sql
oracle_txn_server/migrations/2025-11-07-000000_create_txn_opt_lock/: down.sql  up.sql
oracle_txn_server/migrations/2025-11-08-000000_add_optimistic_lock/: down.sql  up.sql
oracle_txn_server/migrations/2025-11-08-000001_rename_description_to_txn101/: down.sql  up.sql
oracle_txn_server/migrations/oracle/2025-11-07-000000_create_transactions/: down.sql  up.sql
oracle_txn_server/migrations/postgres/2025-11-07-000000_create_transactions/: down.sql  up.sql
oracle_txn_server/src/: db.rs  main.rs  models.rs  schema.rs  services.rs  xa.rs
rest_gateway/: Cargo.toml  Dockerfile  README.md
rest_gateway/src/: main.rs
samplesvr_rust/: Cargo.toml  build.rs
samplesvr_rust/src/: main.rs  services.rs
ubf_test_client/: Cargo.toml
ubf_test_client/examples/: derive_macro_example.rs  ubf_fields_example.rs
ubf_test_client/src/: main.rs
ubfsvr_rust/: Cargo.toml  build.rs
ubfsvr_rust/examples/: ubf_struct_example.rs
ubfsvr_rust/src/: main.rs
ubfsvr_rust/tests/: ubf_integration_test.rs
ubftab/: test.fd
