[workspace]
members = [
    "endurox-sys",
    "samplesvr_rust",
    "rest_gateway",
]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
