[workspace]
members = [
#    "endurox-sys",
#    "endurox-derive",
    "samplesvr_rust",
    "rest_gateway",
    "ubfsvr_rust",
    "ubf_test_client",
    "oracle_txn_server",
]
resolver = "2"
exclude = ["endurox-sys"]

[workspace.dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
#axum = "0.7"
diesel = { version = "2.1", default-features = false }
diesel-oci = "0.4.0"
r2d2 = "0.8"
