[package]
name = "endurox-sys"
version = "0.1.1"
edition = "2021"
authors = ["Sergej Lepin"]
description = "Low-level FFI bindings for Enduro/X middleware"
license = "MIT"
repository = "https://github.com/serdzz/endurox-rust"
homepage = "https://github.com/serdzz/endurox-rust"
documentation = "https://docs.rs/endurox-sys"
readme = "README.md"
keywords = ["endurox", "middleware", "xatmi", "ubf", "ffi"]
categories = ["api-bindings", "external-ffi-bindings"]
slinks = "endurox"

[lib]
name = "endurox_sys"

[dependencies]
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
endurox-derive = { version = "0.1", optional = true }


[build-dependencies]

[features]
default = []
server = []  # Включает server-specific биндинги (atmisrvnomain)
client = []  # Включает client-specific биндинги
ubf = []     # Включает UBF API
derive = ["endurox-derive"]  # Включает derive макрос для UbfStruct
