[package]
name = "oracle_txn_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle_txn_server"
path = "src/main.rs"

[dependencies]
endurox-sys = { path = "../endurox-sys", features = ["server", "ubf", "derive"] }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Oracle native driver
oracle = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

[build-dependencies]

[package.metadata.cargo-build]
rustflags = ["-C", "link-arg=-latmisrvnomain"]
