[package]
name = "rest_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
endurox-sys = { path = "../endurox-sys", features = ["client", "ubf", "derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
actix-web = "4.9"
actix-rt = "2.10"
num_cpus = "1.16"
