[package]
name = "samplesvr_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "samplesvr_rust"
path = "src/main.rs"

[dependencies]
endurox-sys = { version = "0.1", features = ["server", "ubf", "derive"] }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]

[package.metadata.cargo-build]
rustflags = ["-C", "link-arg=-latmisrvnomain"]
